--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,20 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" routerLink="/">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/login">Login</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/sample">Sample</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/register">Register</a>
+  </li>
+</ul>
 
 <style>
   :host {
@@ -15,6 +29,7 @@
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    
   }
 
   h1,
