--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,37 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" routerLink="/">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/login">Login</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/sample">Sample</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/register">Register</a>
-  </li>
-</ul>
-</nav>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/sample">Sample</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
+    </ul>
+  </nav>
 
-<ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-  <li class="nav-item">
-    <a href="https://localhost:7235/swagger/index.html" class="nav-link">{{ username }}</a>
-  </li>
-  <li class="nav-item">
-    <a href class="nav-link" (click)="logout()">LogOut</a>
-  </li>
-</ul>
+  <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+    <li class="nav-item">
+      <a href="https://localhost:7235/swagger/index.html" class="nav-link">{{ username }}</a>
+    </li>
+    <li class="nav-item">
+      <a href class="nav-link" (click)="logout()">LogOut</a>
+    </li>
+  </ul>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+  <div class="container">
+    <router-outlet></router-outlet>
+
+    <!-- Google botun -->
+    <div *ngIf="!isLoggedIn">
+      <div id="google-signin-button"></div>
+    </div>
+
+  </div>
 </div>
