--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,61 @@
+<!-- Google API Client Library for JavaScript -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My App</title>
+  <script src="https://apis.google.com/js/api.js"></script>
+</head>
+<body>
+
 <div id="app">
+  <!-- Navbar section -->
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" routerLink="/">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/login">Login</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/sample">Sample</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/register">Register</a>
-  </li>
-</ul>
-</nav>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/sample">Sample</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
+    </ul>
+  </nav>
 
-<div id="g_id_onload"
-     data-client_id="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com"
-     data-context="signin"
-     data-ux_mode="popup"
-     data-login_uri="http://localhost:4200"
-     data-auto_prompt="false">
-</div>
+  <!-- Google Sign-In button -->
+  <div id="g_id_onload"
+       data-client_id="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com"
+       data-context="signin"
+       data-ux_mode="popup"
+       data-login_uri="http://localhost:4200"
+       data-auto_prompt="false">
+  </div>
+  <div class="g_id_signin"
+       data-type="standard"
+       data-shape="rectangular"
+       data-theme="outline"
+       data-text="signin_with"
+       data-size="large"
+       data-logo_alignment="left">
+  </div>
 
-<div class="g_id_signin"
-     data-type="standard"
-     data-shape="rectangular"
-     data-theme="outline"
-     data-text="signin_with"
-     data-size="large"
-     data-logo_alignment="left">
-</div>
+  <!-- Logged in user menu -->
+  <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+    <li class="nav-item">
+      <a href="https://localhost:7235/swagger/index.html" class="nav-link">{{ username }}</a>
+    </li>
+    <li class="nav-item">
+      <a href class="nav-link" (click)="logout()">LogOut</a>
+    </li>
+  </ul>
 
-<ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-  <li class="nav-item">
-    <a href="https://localhost:7235/swagger/index.html" class="nav-link">{{ username }}</a>
-  </li>
-  <li class="nav-item">
-    <a href class="nav-link" (click)="logout()">LogOut</a>
-  </li>
-</ul>
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+  <!-- Angular router outlet for rendering components -->
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
