--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,6 +8,12 @@
   <meta name="google-signin-client_id" content="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.comgit">
 </head>
 <body>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-info-bar></app-info-bar>
   <div class="col-md-12">
     <div class="card card-container">
       <img
