--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 // You can add global styles to this file, and also import other style files
 
+@import "~bootstrap/dist/css/bootstrap.css";
+
+
 .nav-tabs {
   margin-top: 70px;
 }
@@ -8,45 +11,6 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
-/* Custom styles for info bar component */
-
-.info-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  background-color: #e8f5e9;
-  border-bottom: 1px solid #81c784;
-  color: #388e3c;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.info-bar .close {
-  cursor: pointer;
-}
-
-.info-bar .close:hover {
-  background-color: #c8e6c9;
-}
-
-.carousel-item h3 {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.carousel-item p {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
 .info-messages {
   position: fixed;
   bottom: 0;
