--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+
   <meta charset="UTF-8">
   <title>My App</title>
   <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
+ 
+  
 
 <div id="app">
   <!-- Navbar section -->
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <ul class="nav nav-tabs">
+<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">My Website</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/sample">Sample</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+      </ul>
+    </div>
+    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="/">Home</a>
+        <a href="https://www.cars.com" class="nav-link">{{ username }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/sample">Sample</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register">Register</a>
+        <a href class="nav-link" (click)="logout()">LogOut</a>
       </li>
     </ul>
-  </nav>
-
-  <div id="g_id_onload"
-       data-client_id="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com"
-       data-context="signin"
-       data-ux_mode="popup"
-       data-login_uri="http://localhost:4200"
-       data-auto_prompt="false">
   </div>
+</nav>
 
-  <div class="g_id_signin"
+<div class="container-fluid my-5">
+ 
+
+  <div class="g_id_signin ml-auto"
        data-type="standard"
        data-shape="rectangular"
        data-theme="outline"
@@ -42,83 +58,42 @@
        data-size="large"
        data-logo_alignment="left">
   </div>
-  <!-- Logged in user menu -->
+</div>
 
-  <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-    <li class="nav-item">
-      <a href="https://localhost:7235/swagger/index.html" class="nav-link">{{ username }}</a>
-    </li>
-    <li class="nav-item">
-      <a href class="nav-link" (click)="logout()">LogOut</a>
-    </li>
-  </ul>
+<!-- Time -->
+<div class="timestamp">
+  {{ currentDate | date:'MMM d, y h:mm a' }}
+</div>
 
 
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-
-  <app-info-bar></app-info-bar>
+  
 
   <!-- Added element: banner -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Welcome to My App!</h1>
-      <p class="lead">This is a sample Angular app built with TypeScript and Visual Studio Code.</p>
+      <p class="lead">This is my angular project made in typescript. I hope this presentation will be considered of good quality, every piece of code on this project is made by 1 person. Thank you for looking at my test site. No tools were used!</p>
     </div>
   </div>
-
-  <!-- Added element: footer -->
-  <footer class="page-footer font-small bg-dark text-light">
-    <div class="container text-center">
-      <p>&copy; 2023 My App. All rights reserved.</p>
-    </div>
-  </footer>
   
-  <!-- Added element: calendar -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div id="calendar"></div>
-      </div>
-    </div>
-  </div>
+  
 
-  <!-- Added element: image carousel -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
-        <div id="image-carousel" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#image-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#image-carousel" data-slide-to="1"></li>
-            <li data-target="#image-carousel" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="https://via.placeholder.com/800x400?text=Slide+1" class="d-block w-100" alt="Slide 1">
-            </div>
-            <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x400?text=Slide+2" class="d-block w-100" alt="Slide 2">
-            </div>
-            <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x400?text=Slide+3" class="d-block w-100" alt="Slide 3">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#image-carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#image-carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+
+ <!-- Added element: image carousel -->
+ 
+ <app-carousel></app-carousel>
+
 
 </div>
+<!-- Added element: footer -->
+<footer class="page-footer font-small bg-dark text-light">
+  <div class="container text-center">
+    <p>&copy; 2023 My App. All rights reserved.</p>
+  </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 
 </body>
 </html>
