--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,6 +68,7 @@
 
   
 
+  <div *ngIf="isHomePage">
   <!-- Added element: banner -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
@@ -75,22 +76,55 @@
       <p class="lead">This is my angular project made in typescript. I hope this presentation will be considered of good quality, every piece of code on this project is made by 1 person. Thank you for looking at my test site. No tools were used!</p>
     </div>
   </div>
-  
-  
-
-
- <!-- Added element: image carousel -->
  
- <app-carousel></app-carousel>
+  <!-- Added element: image carousel -->
+  <app-carousel></app-carousel>
+</div>
 
+
+<!-- Google Sign-in button for login and register pages -->
+  <div id="g_id_onload"
+    data-client_id="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com"
+    data-context="signin"
+    data-ux_mode="popup"
+    data-login_uri="http://localhost:4200"
+    data-auto_prompt="false">
+  </div>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
 </div>
 <!-- Added element: footer -->
-<footer class="page-footer font-small bg-dark text-light">
+<footer class="page-footer bg-dark text-light">
   <div class="container text-center">
-    <p>&copy; 2023 My App. All rights reserved.</p>
+    <div class="row">
+      <div class="col-md-4">
+        <h4>About My App</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget mauris augue. Sed varius tellus quis sapien vulputate aliquet. Sed non eleifend mauris.</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Contact Us</h4>
+        <ul class="list-unstyled">
+          <li><i class="fa fa-envelope mr-2"></i>support@myapp.com</li>
+          <li><i class="fa fa-phone mr-2"></i>1-800-MY-APP</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4>Follow Us</h4>
+        <ul class="list-unstyled">
+          <li><a href="#"><i class="fab fa-facebook-f mr-2"></i>Facebook</a></li>
+          <li><a href="#"><i class="fab fa-twitter mr-2"></i>Twitter</a></li>
+          <li><a href="#"><i class="fab fa-instagram mr-2"></i>Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <p class="text-center">&copy; 2023 My App. All rights reserved.</p>
   </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
