--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
 </div>
 
 
-<!-- Google Sign-in button for login and register pages -->
+<!-- Google Sign-in button -->
   <div id="g_id_onload"
     data-client_id="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com"
     data-context="signin"
