--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,3 +4,24 @@
     vertical-align: middle;
   }
   
+  .card-container {
+    max-width: 350px;
+    padding: 30px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .profile-img-card {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    border-radius: 50%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+    
